--- a/css/style.css
+++ b/css/style.css
@@ -1,76 +1,122 @@
-.split-panes 
-{
+body {
+  font-size: 11px;
+}
+
+.borderless tbody {
+  word-break: break-all;
+}
+.borderless tbody td,
+.borderless tbody th {
+  border: none !important;
+  font-size: small;
+}
+.borderless tbody td {
+  text-align: center;
+}
+
+
+
+.split-panes-horizontal {
   left: 0px;
   right: 0px;
   top: 0px;
   bottom: 0px;
   position: absolute;
+  overflow: hidden;
 }
-
-.split-panes > .split-handler 
-{
-  background: transparent;
+.split-panes-horizontal .arrowIcon {
+  cursor: pointer;
+  font-size: 11px;
+  margin: 0px 1px 2px 2px;
+}
+.split-panes-horizontal .split-handler {
   position: absolute;
   z-index: 999;
+  background-color: #ddd;
 }
-
-/* Horizontal */ 
-
-.split-panes.horizontal > .split-handler
-{
-  width: 4px;
-  top: 0px; 
-  left: 50%;
-  bottom: 0px;
-  cursor: ew-resize;
-}
-
-.split-panes.horizontal > .split-pane1,
-.split-panes.horizontal > .split-pane2
-{
-  position: absolute;
-  height: 100%;
-}
-
-.split-panes.horizontal > .split-pane1
-{
-  width: 50%; 
-}
-
-.split-panes.horizontal > .split-pane2
-{
-  left: 50%;
-  right: 0px;
-  border-left: 1px solid #aaa;
-}
-
-
-/* Vertical */
-
-.split-panes.vertical > .split-handler
-{
-  height: 4px;
-  top: 50%; 
+.split-panes-horizontal .split-handler {
+  /*height: 11px;*/
+  top: 50%;
   left: 0px;
   right: 0px;
-  cursor: ns-resize;
+  cursor: row-resize;
+  color: #777;
 }
-
-.split-panes.vertical > .split-pane1,
-.split-panes.vertical > .split-pane2
-{
+.split-panes-horizontal .split-pane1,
+.split-panes-horizontal .split-pane2 {
   position: absolute;
   width: 100%;
 }
-
-.split-panes.vertical > .split-pane1
-{
-  height: 50%; 
+.split-panes-horizontal .split-pane1 .title {
+  margin-top: 10px;
+  margin-left: 10px;
 }
 
-.split-panes.vertical > .split-pane2
-{
+.split-panes-horizontal .split-pane2 .title {
+  margin-top: 20px;
+  margin-left: 10px;
+}
+
+
+.split-panes-horizontal .split-pane1 {
+  height: 50%;
+}
+.split-panes-horizontal .split-pane2 {
   top: 50%;
   bottom: 0px;
-  border-top: 1px solid #aaa;
+}
+.split-panes-vertical {
+  left: 0px;
+  right: 0px;
+  top: 0px;
+  bottom: 0px;
+  position: absolute;
+  overflow: hidden;
+}
+.split-panes-vertical .arrowIcon {
+  cursor: pointer;
+  font-size: 11px;
+  margin: 2px 2px 2px 2px;
+}
+.split-panes-vertical .split-handler {
+  position: absolute;
+  z-index: 999;
+  background-color: #ddd;
+  height: inherit;
+  width: 11px;
+  top: 0px;
+  left: 50%;
+  bottom: 0px;
+  cursor: col-resize;
+  color: #777;
+}
+.split-panes-vertical .split-pane1,
+.split-panes-vertical .split-pane2 {
+  position: absolute;
+  height: 100%;
+  background-color: white;
+}
+.split-panes-vertical .split-pane1 .title,
+.split-panes-vertical .split-pane2 .title {
+  margin-left: 0;
+  position: absolute;
+  left: -50px;
+  transform: rotate(-90deg);
+  top: 70px;
+}
+.split-panes-vertical .split-pane1 {
+  width: 50%;
+  top: inherit;
+}
+.split-panes-vertical .split-pane1 .title {
+  left: -50px;
+}
+.split-panes-vertical .split-pane2 {
+  left: 50%;
+  width: 50%;
+  right: 0px;
+  top: inherit;
+}
+.split-panes-vertical .split-pane2 .title {
+  left: -40px;
 }
